k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-ingress
  namespace: restauranty-km
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-restauranty
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - restauranty.kondal.online
    secretName: restauranty-tls
  rules:
  - http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/discounts
        pathType: Prefix
        backend:
          service:
            name: discounts
            port:
              number: 3002
      - path: /api/items
        pathType: Prefix
        backend:
          service:
            name: items
            port:
              number: 3003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: restauranty.kondal.online
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /api/discounts
        pathType: Prefix
        backend:
          service:
            name: discounts
            port:
              number: 3002
      - path: /api/items
        pathType: Prefix
        backend:
          service:
            name: items
            port:
              number: 3003
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
